--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <body>
     <nav class="menu-h">
         <ul>
-            <li><a href="#">O que é?</a></li>
-            <li><a href="#">Como funciona?</a></li>
-            <li><a href="#">Setores</a></li>
-            <li><a href="#">Características e etapas</a></li>
+            <li><a href="#">Características</a></li>
+            <li><a href="#">Etapas</a></li>
             <li> <a href="#">Cursos e Profissões na área</a></li>
             <li><a href="index.html">Voltar</a></li>
         </ul>
