--- a/index.html
+++ b/index.html
@@ -16,5 +16,21 @@
             <li><a href="index.html">Voltar</a></li>
         </ul>
     </nav>  
+    <p style="background-image: url(cowboy-with-hat-photorealistic-environment.jpg)"></p>
+    <main>
+        <section class="home">
+            <div class="home-text">
+                <h1 class="text-h1">Importância do Agronegócio</h1>
+                <h1 class="text-h1">para a Cidade</h1>
+                <br><br><br><br><br><br><br><br><br><br><br>
+                <p>Como juntar o tradicional com a inovação</p>
+        
+                <br><br><br>
+            </div>
+            <div class="home-img">
+                <a href="index2.html"><img src="tartaruga.png" width="100%" class="nemo"></a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
