--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <main>
         <section class="home">
             <div class="home-text">
-                <h1 class="text-h1">Importância do Agronegócio</h1>
-                <h1 class="text-h1">para a Cidade</h1>
+                <h1 class="text-h1">O Agro não para</h1>
                 <br><br><br><br><br><br><br><br><br><br><br>
-                <p>Como juntar o tradicional com a inovação</p>
+                <p>O crescimento do mercado de trabalho</p>
         
                 <br><br><br>
             </div>
